--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,11 @@
     padding: 0px;
 }
 .Tblock{
-    width: 250px;
+    width: 50px;
     height: 100px;
     border-style: solid;
     border-width: medium;
-    border-color: #ed7468;
+    border-color: #1D74AD;
     margin-top: 30px;
     margin-left: 20px;
     position: relative;
@@ -19,7 +19,7 @@
 
 }
 .Tenreg{
-    width:230px ;
+    width:20px ;
     height: 20px;
     border-style: solid;
     border-width: thin;
@@ -27,12 +27,13 @@
     margin-top: 5px;
     margin-left: 2px;
     position: relative;
+    left: 9px;
     display:flex;
     /*background-color: #b1bbff;*/
 }
 
 .TenregO{
-    width:190px ;
+    width:20px ;
     height: 20px;
     border-style: solid;
     border-width: thin;
@@ -41,6 +42,7 @@
     margin-left: 2px;
     position: relative;
     display:flex;
+    opacity: 0;
     /*background-color: #b1bbff;*/
 }
 
@@ -51,7 +53,7 @@
     margin: 10px;
     background-color: #1fdfff;
 }
-p{
+.bata{
     width:10px ;
     height: 10px;
     color: black;
@@ -63,14 +65,13 @@ p{
 }
 
 .overflow{
-    width: 210px;
-    height: 200px;
-    border-style: solid;
-    border-width: medium;
-    border-color: #ed7468;
+    width: 30px;
+    height: 150px;
+    border-style: none;
     margin-top: 30px;
     margin-left: 20px;
     position: relative;
+    right: 11px;
     display: inline-block;
 
 
@@ -78,20 +79,51 @@ p{
 
 
 #information{
-    width: 800px;
-    height: 50px;
+    width: 300px;
+    height: 200px;
     border-style: solid;
     border-width: medium;
-    border-color: #ed7468;
-    margin-top: 30px;
+    border-color: #1D74AD;
+    margin-right: 200px;
     margin-left: 20px;
     position: relative;
     display: inline-block;
 
 
 }
+
+#information2{
+    width: 300px;
+    height: 200px;
+    border-style: solid;
+    border-width: medium;
+    border-color: #1D74AD;
+
+
+    margin-left: 200px;
+    position: relative;
+
+
+    display: inline-block;
+
+
+}
 #espace{
     width: 350px;
-    height: 200px;
+    height: 50px;
 
+}
+
+#calculadr{
+    border: 3px outset #1D74AD;
+    border-radius: 40px 40px 40px 40px;
+    width: 200px;
+    height: 50px;
+
+}
+
+#adr{
+    position: center;
+    margin-top: 10px;
+    margin-left: 17px;
 }
