--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
-    margin-right: 200px;
+    margin-right: 100px;
     margin-left: 20px;
     position: relative;
     display: inline-block;
@@ -98,9 +98,10 @@
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
+    top: 68px;
 
+    margin-left: 100px;
 
-    margin-left: 200px;
     position: relative;
 
 
@@ -109,7 +110,7 @@
 
 }
 #espace{
-    width: 350px;
+    width: 1000px;
     height: 50px;
 
 }
@@ -126,4 +127,7 @@
     position: center;
     margin-top: 10px;
     margin-left: 17px;
+}
+#container{
+    display: inline-block;
 }
