--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     width: 1125px;
     height: 237px;
     padding: 0px;
+    display: block;
 }
 .Tblock{
     width: 50px;
@@ -75,12 +76,13 @@
     display: inline-block;
 
 
+
 }
 
 
 #information{
-    width: 300px;
-    height: 200px;
+ /*   width: 300px;*/
+    /*height: 200px;*/
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
@@ -88,13 +90,14 @@
     margin-left: 20px;
     position: relative;
     display: inline-block;
-
+    border: 3px outset #1D74AD;
+    border-radius: 40px 40px 40px 40px;
 
 }
 
 #information2{
-    width: 300px;
-    height: 200px;
+    width: 500px;
+   /* height: 300px;*/
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
@@ -107,11 +110,12 @@
 
     display: inline-block;
 
-
+    border: 3px outset #1D74AD;
+    border-radius: 40px 40px 40px 40px;
 }
 #espace{
     width: 1000px;
-    height: 50px;
+    height: 10px;
 
 }
 
@@ -130,4 +134,17 @@
 }
 #container{
     display: inline-block;
+}
+#container2{
+    width: 900px;
+    height: 50px;
+}
+
+#titre{
+    font-size: 18px;
+    color: #3569ff;
+}
+
+p{
+    color: black;
 }
