--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,6 @@
 
 .fichier{
-    width: 1125px;
-    height: 237px;
-    padding: 0px;
+
     display: block;
 }
 .Tblock{
@@ -18,6 +16,10 @@
 
 
 
+}
+
+#hashage{
+    display: inline-block;
 }
 .Tenreg{
     width:20px ;
@@ -73,7 +75,7 @@
     margin-left: 20px;
     position: relative;
     right: 11px;
-    display: inline-block;
+   display: inline-block;
 
 
 
@@ -81,30 +83,29 @@
 
 
 #information{
- /*   width: 300px;*/
+   /* width: 800px;**/
     /*height: 200px;*/
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
-    margin-right: 100px;
-    margin-left: 20px;
     position: relative;
-    display: inline-block;
+    margin-top: 10px;
     border: 3px outset #1D74AD;
     border-radius: 40px 40px 40px 40px;
 
 }
 
 #information2{
-    width: 500px;
+   width: 500px;
    /* height: 300px;*/
     border-style: solid;
     border-width: medium;
     border-color: #1D74AD;
-    top: 68px;
+   /** top: 68px;*/
 
-    margin-left: 100px;
-
+    margin-left: 20px;
+    left:700px;
+    bottom: 50px;
     position: relative;
 
 
@@ -136,8 +137,7 @@
     display: inline-block;
 }
 #container2{
-    width: 900px;
-    height: 50px;
+
 }
 
 #titre{
@@ -147,4 +147,10 @@
 
 p{
     color: black;
+}
+
+
+ul {
+    list-style-type: none;
+    display: inline;
 }
